--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1947,10 +1947,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#importing pickle\n",
+    "import pickle\n",
+    "file=open('kaggle_titanic_model.pkl','wb')\n",
+    "pickle.dump(classifier,file)"
+   ]
   },
   {
    "cell_type": "code",
